--- a/portfolio/portfolio_k/main.html
+++ b/portfolio/portfolio_k/main.html
@@ -44,7 +44,7 @@
 
     <section class="introduce">
       <div class="introImg">
-        <img src="" alt="" />
+        <img src="" alt="bread" />
       </div>
       <div class="introInfo">
         <div class="introBegins">my story begins</div>
